# printui

./: .gitignore  MANIFEST.in  README.md  printui.conf.example  pyproject.toml  requirements.txt  setup.py
printui/: main.py  printer.py
printui/static/css/: latofonts.css
printui/static/js/: designer.js
printui/views/: base.jinja2  designer.html
