[project]
name = "printui"
description = "Webinterface to talk to Brother QL label printers. Fork of brother_ql_web"
readme = "README.md"
license = "GPL-3.0-or-later"

dynamic = ["dependencies"]
version = "0.1"
requires-python = ">= 3.11"

authors = [
    { name = "Philipp Klaus" },
    { name = "Aaron Bulmahn", email = "arbudev@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/arbu/printui"

[project.scripts]
printui = "printui:main"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["printui"]
package-data.printui = ["static/*/*", "views/*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
